commiting current state